--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <meta name="description" content="">
-  <link rel="stylesheet" href="dist/styles/screen.min.css">
+  <meta charset="UTF-8">
+  <title>Hello</title>
 </head>
 <body>
-  <script src="dist/scripts/main.min.js"></script>
+<h1>Hello World!</h1>
 </body>
 </html>
